<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.nutrehogar</groupId>
    <artifactId>SistemaContable</artifactId>
    <version>2.0</version>
    <packaging>jar</packaging>

    <name>Sistema Contable</name>
    <url>https://github.com/TrotmanCH/Contabilidad-Nutre-Hogar</url>
    <description>
        Este es un software de escritorio para la gestión contable de la Fundación Nutre Hogar. 
        Permite el control de registros y cuentas contables, incluyendo la generación de reportes de libro diario,
        mayor general y balance de comprobación.
    </description>
    <inceptionYear>2024</inceptionYear>

    <organization>
        <name>Nutre Hogar</name>
        <url>https://www.nutrehogar.net/</url>
    </organization>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <exec.mainClass>com.nutrehogar.sistemacontable.Main</exec.mainClass>
        <currentHibernateVersion>7.2.0.Final</currentHibernateVersion>
    </properties>

    <developers>
        <developer>
            <id>Calcifer1331</id>
            <name>Yoseph Arauz</name>
            <email>Calcifer1331@hotmail.com</email>
            <url>https://github.com/Calcifer1331</url>
            <roles>
                <role>Software Developer</role>
                <role>Full Stack Developer</role>
                <role>Tester</role>
                <role>Data Engineer</role>
            </roles>
            <organization>
                Universidad Tecnológica de Panamá
                Centro Regional de Bocas del Toro
            </organization>
            <organizationUrl>https://bt.utp.ac.pa/</organizationUrl>
            <properties>
                <organizationEmail>yoseph.arauz@utp.ac.pa</organizationEmail>
            </properties>
        </developer>
        <developer>
            <id>cesar-a-delacruz</id>
            <name>César De La Cruz</name>
            <email>cesar.a.delacruz1@outlook.com</email>
            <url>https://github.com/cesar-a-delacruz</url>
            <roles>
                <role>Full Stack Developer</role>
            </roles>
            <organization>
                Universidad Tecnológica de Panamá
                Centro Regional de Bocas del Toro
            </organization>
            <organizationUrl>https://bt.utp.ac.pa/</organizationUrl>
            <properties>
                <organizationEmail>cesar.delacruz@utp.ac.pa</organizationEmail>
            </properties>
        </developer>
        <developer>
            <id>JaysonG05</id>
            <name>Jayson Grant</name>
            <email>jaysonc-09@outlook.es</email>
            <url>https://github.com/JaysonG05</url>
            <roles>
                <role>Software Developer</role>
                <role>Full Stack Developer</role>
            </roles>
            <organization>
                Universidad Tecnológica de Panamá
                Centro Regional de Bocas del Toro
            </organization>
            <organizationUrl>https://bt.utp.ac.pa/</organizationUrl>
            <properties>
                <organizationEmail>yoseph.arauz@utp.ac.pa</organizationEmail>
            </properties>
        </developer>
    </developers>

    <contributors>
        <contributor>
            <name></name>
        </contributor>
    </contributors>

    <licenses>
        <license>
            <name>Apache License</name>
            <url>http://www.apache.org/licenses/</url>
            <distribution>manual</distribution>
        </license>
    </licenses>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>${currentHibernateVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
            <version>3.2.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-scan-jandex -->
        <!--    Escane y busca las clases el mismo-->
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-scan-jandex</artifactId>
            <version>${currentHibernateVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-agroal -->
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-agroal</artifactId>
            <version>${currentHibernateVersion}</version>
            <!--        <type>pom</type>-->
        </dependency>
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-processor</artifactId>
            <version>${currentHibernateVersion}</version>
            <scope>compile</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.7.4</version>
        </dependency>

        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports</artifactId>
            <version>7.0.1</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports-pdf</artifactId>
            <version>7.0.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.42</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.5.2</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-extras</artifactId>
            <version>3.4.1</version>
        </dependency>
        
        <!-- https://mvnrepository.com/artifact/com.formdev/flatlaf-fonts-roboto -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-fonts-roboto</artifactId>
            <version>2.137</version>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>26.0.2-1</version>
            <scope>compile</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>

        <!-- SLF4J binding para Log4j2 -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>2.24.3</version>
        </dependency>

        <!-- Core -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.24.3</version>
        </dependency>


        <dependency>
            <groupId>org.mindrot</groupId>
            <artifactId>jbcrypt</artifactId>
            <version>0.4</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>6.0.1</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.20.0</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.20.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.hibernate.orm</groupId>
                <artifactId>hibernate-maven-plugin</artifactId>
                <version>${currentHibernateVersion}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>enhance</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
